# Grec0

./: CMakeLists.txt  Makefile
include/: board.h  uci.h
src/: board.cpp  main.cpp  uci.cpp
